# geektime-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
01_stack_heap/: Cargo.toml
01_stack_heap/misc/: varargs.c
01_stack_heap/src/: error.rs  pointer.rs  string.rs
02_concepts/: Cargo.toml
02_concepts/misc/: crash.c  type.c  type.py
02_concepts/src/: shape.rs
03/concepts/: Cargo.toml
03_grammar/: .gitignore
03_grammar/concepts/: Cargo.toml
03_grammar/scrape_url/: .gitignore  Cargo.toml
03_grammar/scrape_url_args/: Cargo.toml
03_grammar/scrape_url_with_error_handling/: Cargo.toml
03_grammar/scrape_url_with_error_handling/src/: main.rs
04_httpie/: Cargo.toml
04_httpie/examples/: cli.rs  cli_get.rs  cli_verify.rs
04_httpie/src/: main.rs
05_thumbor/: Cargo.toml  abi.proto  build.rs
05_thumbor/src/: imageproc.rs  main.rs  server1.rs  server2.rs
05_thumbor/src/engine/: mod.rs  photon.rs
05_thumbor/src/pb/: abi.rs  mod.rs
06_queryer/: Cargo.toml.bak  README.md
06_queryer/data-viewer/: package-lock.json  package.json
06_queryer/queryer/: Cargo.toml
06_queryer/queryer-js/: Cargo.toml  README.md  package.json
06_queryer/queryer-js/src/: lib.rs
06_queryer/queryer-py/: Cargo.toml  README.md
06_queryer/queryer-py/src/: lib.rs
06_queryer/queryer/examples/: covid.rs  dialect.rs
06_queryer/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
07_ownership/: Cargo.toml
07_ownership/misc/: reference.c
07_ownership/src/: check_copy.rs  multiple_mut_ref1.rs  outlive_heap.rs  outlive_heap1.rs  ownership1.rs  ownership_error.rs  ownership_reference.rs
08_borrow/: Cargo.toml
08_borrow/misc/: multiple_mut_ref.py
08_borrow/src/: heap_reference_stack_outlive.rs  local_ref.rs  manual_drop.rs  multiple_mut_ref.rs  ownership_reference.rs  reborrow.rs  reborrow1.rs  vec_grow.rs
09_multi_owner/: Cargo.toml
09_multi_owner/src/: dag.rs  dag_mut.rs  refcell.rs
10_lifetime/: Cargo.toml
10_lifetime/src/: lifetime.rs  lifetime1.rs  lifetime2.rs  lifetime3.rs  lifetime4.rs  lifetime_mono.rs  lifetime_non_lexical.rs  strtok.rs
11_memory/: Cargo.toml
11_memory/examples/: alignment.rs  raii.rs  size.rs
11_memory/misc/: test.c
12_type_system/: Cargo.toml
12_type_system/src/: constant.rs  id.rs  reader.rs  writer.rs
13_traits/: Cargo.toml
13_traits/src/: animal.rs  complex.rs  dd.rs  formatter.rs  iterator.rs  parse.rs  parse1.rs  parse2.rs  trait_object.rs  trait_object_internal.rs  write.rs
14_sys_traits/: Cargo.toml
14_sys_traits/src/: convert.rs  copy_drop.rs  default.rs  deref.rs  dev.rs  linked_list.rs  send_sync.rs  sized.rs
15_smart_pointers/: Cargo.toml
15_smart_pointers/src/: allocator.rs  borrow.rs  box.rs  cow1.rs  cow2.rs  guard.rs  guard1.rs  mystring.rs
16_data_structure/: Cargo.toml
16_data_structure/src/: boxed.rs  iter.rs  iter_ext.rs  slice1.rs  slice2.rs  slice3.rs  slice4.rs  slice5.rs  type_name.rs
17_hash_table/: Cargo.toml  hashmap2.txt
17_hash_table/src/: btreemap1.rs  hash.rs  hashmap1.rs  hashmap2.rs  hashmap3.rs  siphasher.rs
18_error_handling/: error_handling.go
19_closure/: Cargo.toml  closure.txt  closure1.txt  closure2.txt  closure3.txt
19_closure/examples/: callable.rs  callable_result.rs  closure_size.rs  closure_size1.rs  fn1.rs  fn_mut1.rs  fn_once1.rs  fn_once2.rs  fn_return.rs  mimic_closure.rs  thread.rs
19_closure/misc/: closure.go
21_kv/: Cargo.toml
21_kv/examples/: client.rs  dummy_server.rs  server.rs
21_kv/src/: error.rs
21_kv/src/pb/: abi.rs  mod.rs
21_kv/src/service/: command_service.rs  mod.rs
21_kv/src/storage/: memory.rs  mod.rs
23_advanced_generics/: Cargo.toml
23_advanced_generics/misc/: phantom.ts
24_advanced_trait_objects/: Cargo.toml
26_kv/: Cargo.toml  abi.proto  build.rs
26_kv/examples/: client.rs  dummy_server.rs  server.rs  server_with_sled.rs
26_kv/src/: error.rs  lib.rs
26_kv/src/pb/: mod.rs
26_kv/src/storage/: memory.rs  mod.rs  sleddb.rs
29_network/: Cargo.toml
29_network/examples/: async_client.rs  async_listener.rs  framed_client.rs  framed_server.rs  p2p_chat.rs  rocket_server.rs
29_network/src/: lib.rs
30_unsafe/: Cargo.toml
31_ffi/ffi/: Cargo.toml  (+2 more)
32_xunmi_py/: Cargo.toml
33_concurrency/: Cargo.toml
35_con_utils/: Cargo.toml
36_kv/: Cargo.toml
36_kv/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
36_kv/src/: client.rs  error.rs  server.rs
36_kv/src/network/: frame.rs  mod.rs
36_kv/src/service/: mod.rs
37_kv/: Cargo.toml
38_async/: Cargo.toml
38_async/examples/: async_io.rs  async_test.rs  async_thread.rs  blocking_async_task.rs  mutex.rs  pow.rs  sync_io.rs  tcp_listener.rs  thread_io.rs
39_async_internals/: Cargo.toml
40_async_stream/: Cargo.toml
40_async_stream/examples/: async_read.rs  fibonacci.rs  readline.rs  sink.rs  sink_file.rs  stream_iter.rs  yamux_client.rs  yamux_server.rs
41_kv/: Cargo.toml  build.rs
41_kv/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
41_kv/fixtures/: ca.key  client.cert  client.key
41_kv/src/: client.rs  server.rs
41_kv/src/network/: frame.rs  mod.rs  stream.rs  tls.rs
41_kv/src/service/: mod.rs
42_kv/: Cargo.toml  diff_client  diff_refactor  diff_service  diff_topic  diff_yamux
43_docdoc/: Cargo.toml
44_data_processing/: Cargo.toml
44_data_processing/data/: create_users.sql  example.db
44_data_processing/examples/: log.rs  user.rs
44_data_processing/fixtures/: analyze.sql  log_schema.yml  logs.csv
45_arch/: Cargo.toml
46_kv/: Cargo.toml  abi.proto  build.rs  diff_benchmark  diff_config  diff_logging  diff_telemetry
47_48_macros/: Cargo.toml  README.md
47_48_macros/examples/: command.rs  command_with_attr.rs  query.rs  rule.rs
47_48_macros/src/: builder.rs  builder_with_attr.rs  lib.rs  raw_builder.rs
47_48_macros/templates/: builder.j2
ending/: Cargo.toml
ending/examples/: http2.rs
mid_term_rgrep/: Cargo.toml
mid_term_rgrep/src/: error.rs  lib.rs  main.rs
(+132 files in other folders)
