[workspace]

members = [
  "02_concepts",
  "03_grammar/scrape_url",
  "03_grammar/scrape_url_args",
  "03_grammar/scrape_url_with_error_handling",
  "04_httpie",
  "05_thumbor",
  "06_queryer/queryer",
  "06_queryer/queryer-js",
  "06_queryer/queryer-py",
  "07_ownership",
  "08_borrow",
  "09_multi_owner",
  "10_lifetime",
  "11_memory",
  "12_type_system",
  "13_traits",
  "14_sys_traits",
  "15_smart_pointers",
  "16_data_structure",
  "17_hash_table",
  "19_closure",
  "21_kv",
  "mid_term_rgrep",
  "23_advanced_generics"
]
