[workspace]

members = [
  "02_concepts",
  "03_grammar/scrape_url",
  "03_grammar/scrape_url_args",
  "03_grammar/scrape_url_with_error_handling",
  "04_httpie",
  "05_thumbor",
  "06_queryer/queryer",
  "06_queryer/queryer-js",
  "06_queryer/queryer-py",
  "07_ownership",
  "08_borrow",
  "09_multi_owner",
  "10_lifetime",
  "11_memory",
  "12_type_system",
  "13_traits",
  "14_sys_traits",
  "15_smart_pointers",
  "16_data_structure",
  "17_hash_table",
  "19_closure",
  "21_kv",
  "mid_term_rgrep",
  "23_advanced_generics",
  "24_advanced_trait_objects",
  "26_kv",
  "29_network",
  "30_unsafe",
  "31_ffi/ffi",
  "31_ffi/ffi_math",
  "32_xunmi_py",
  "33_concurrency",
  "35_con_utils",
  "36_kv",
  "37_kv",
  "38_async",
  "39_async_internals",
  "40_async_stream",
  "41_kv",
  "42_kv",
  "43_docdoc",
  "44_data_processing",
  "45_arch",
  "46_kv",
  "ending",
  "47_48_macros",
]
