[package]
name = "stack_heap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "error"
path = "src/error.rs"

[[bin]]
name = "pointer"
path = "src/pointer.rs"

[[bin]]
name = "string"
path = "src/string.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
