[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ownership1"
path = "src/ownership1.rs"

[[bin]]
name = "ownership_error"
path = "src/ownership_error.rs"

[[bin]]
name = "check_copy"
path = "src/check_copy.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
