[package]
name = "traits"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "write"
path = "src/write.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "parse1"
path = "src/parse1.rs"

[[bin]]
name = "parse2"
path = "src/parse2.rs"

[[bin]]
name = "iterator"
path = "src/iterator.rs"

[[bin]]
name = "complex"
path = "src/complex.rs"

[[bin]]
name = "animal"
path = "src/animal.rs"

[[bin]]
name = "formatter"
path = "src/formatter.rs"

[[bin]]
name = "dd"
path = "src/dd.rs"

[[bin]]
name = "trait_object"
path = "src/trait_object.rs"

[[bin]]
name = "trait_object_internal"
path = "src/trait_object_internal.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
