[package]
name = "async_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
pin-project = "1"
tokio = { version = "1", features = ["full" ] }
tokio-util = { version = "0.6", features = ["compat", "codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
yamux = "0.9"
